# cfi-rs

./: .gitignore  Cargo.toml  README.md
examples/: describe.rs  from_str.rs  parse.rs  parse_strict.rs  validation.rs
src/: error.rs  internals.rs  lib.rs
